update final report conculsion

--- a/documents/FinalReport.html
+++ b/documents/FinalReport.html
@@ -1421,6 +1421,8 @@ best_random_forest_test_score
 </tbody>
 </table>
 </div>
+<p>As the result on unseen data is better than the cross validation
+score, the final model is generalizing well.</p>
 </div>
 </div>
 <div id="further-improvements" class="section level1">
